$Id: History,v 1.8 1999-05-21 04:29:04 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
May 21, 99 H.Kurashige (run-01-00-05)
- Fixed bug in G4VUserPhysicsList::InitializeProcessManager()

May 17, 99 J.Allison
- In G4RunManager.cc, moved G4Timer.hh to prevent conflict with ObjectSpace
  on Sun when using the STL Interface.

Apr 22, 99 M.Asai (tag run-01-00-04)
- Now run ID is set by G4RunManager.

Apr 16,  99 H.Kurashige (tag run-01-00-03)
-  Remove G4VUserPhysicsList::ConstructAllParticles and related
-  Change argument of SetCuts method

Apr 14, 99 H.Kurashige (tag run-01-00-02)
- "buildPhysicsTable" command is added in G4UserPhysicsListMessenger

Apr 09, 99 M.Asai (tag run-01-00-01)
- Argument of G4UserRunAction methods bcomes to const.

Feb. 9 99 H.Kurashige
- G4VUserPhysicsList::RemoveProcessManager is added 

Dec. 9 98 H.Kurashige (tag run-00-04-01)
- G4VUserPhysicsList is updated to use G4GenericIon (Hisaya)
- G4VUserPhysicsList::ConstructAllParticles method is added (Hisaya)
- G4VUserPhysicsList::DumpCutValues use BestOfUnits (Michel)

Nov 12, 98 M.Asai (tag run-00-03-05)
- G4VUserPhysicsList.cc is updated for new EM physics processes (L.Urban).

Oct 13, 98 M.Asai (tag run-00-03-04)