@@ -1,4 +1,4 @@
-$Id: History,v 1.8 1999-05-21 04:29:04 kurasige Exp $
+$Id: History,v 1.9 1999-06-09 01:08:07 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jun 09, 99 M.Asai (tag run-01-00-06)
+- Store/restore the status of the random number engine
+- Get methods of G4RunManager for the user action classes
+
 May 21, 99 H.Kurashige (run-01-00-05)
 - Fixed bug in G4VUserPhysicsList::InitializeProcessManager()
 
